# kb-mcp-server

./: .env.example  .gitignore  Dockerfile  README.md  config.default.yml  docker-compose.yml  docker-entrypoint.sh  main.py  mcp_config.json  pyproject.toml  server.py
.github/workflows/: docker-publish.yml
config/examples/: README.md
scripts/: activate.fish  activate.sh  dev-setup.sh  lint.sh  load.fish  load.sh  test.sh
src/data_tools/: DESIGN.md  IMPLEMENTATION.md  README.md  __init__.py  cli.py  config.example.yml  config.py  document_loader.py  graph_builder.py  graph_traversal.py  kg.py  loader.py  loader_utils.py  processor.py  rag.py  search.py  verify-embeddings.py  visualization.py
src/data_tools/configs/: README.md
src/kb_builder/: __init__.py  cli.py  config.py
src/txtai_mcp_server/: __init__.py  __main__.py  server.py
src/txtai_mcp_server/core/: __init__.py  config.py  context.py  server.py  state.py
src/txtai_mcp_server/tools/: __init__.py  qa.py  retrieve.py  search.py  tools.py
test/: __init__.py  debug_txtai.py  echo.py  graph.ipynb  integration_test_cli.sh  simple_echo.py  test_data.txt  test_data_tools.py  test_data_tools_cli.py  test_data_tools_integration.py  test_mcp_sse2.py  test_server.py  test_txtai_direct.py  verify_index.py
test/knowledgebase/: custom_ds.yml  data_science.md  kb.yml  kb_client.py
test/qa-mcp/: qa.py
test/simple/: simple.py  simple.yml
test/simple-mcp/: simple.py  simple.yml  test_txtai_app.py  test_txtai_direct.py  verify_index.py
test/txtai/: graph.ipynb  test_graph_search_improvements.py
